--- a/widgets/upload_box.html
+++ b/widgets/upload_box.html
@@ -1,10 +1,8 @@
-<div id="uploadBox">
-  <label for="fileInput">Choose file(s):</label>
-  <!-- add data-multiple="true" if you want multi-upload -->
-  <input id="fileInput" type="file" data-multiple="false" />
-  <progress id="uploadProgress" value="0" max="100"></progress>
-  <div id="uploadStatus"></div>
-</div>
+<input type="file" id="fileInput" />
+<progress id="uploadProgress" max="100" value="0" hidden></progress>
+<div id="uploadStatus"></div>
+
+<script type="module" src="/js/upload_box.js"></script>
 
 <!--
 <div id="upload-placeholder"></div>
