--- a/widgets/upload_box.html
+++ b/widgets/upload_box.html
@@ -1,6 +1,6 @@
-<input type="file" id="fileInput" />
+<input type="file" id="fileInput" data-multiple="true" multiple />
 <progress id="uploadProgress" max="100" value="0" hidden></progress>
-<div id="uploadStatus"></div>
+<div id="uploadStatus" data-filekeys="[]"></div>
 
 <script type="module" src="/js/upload_box.js"></script>
 
