added suggestion for reminders option added toasts

--- a/reminders/index.html
+++ b/reminders/index.html
@@ -88,7 +88,7 @@
       <span id = "tesla" class = "section">Tesla</span> | 
       <span id = "rousseau" class = "section">Rousseau</span> 
       <input type=  "date" id="filterDate">
-      <button id="addReminderBtn" class = "hidden">+ Add Reminder</button> 
+      <button id="addReminderBtn">+ Add Reminder</button> 
 
       <hr>
       <div class="reminders-list" id="reminders-list">
