--- a/widgets/navbar.html
+++ b/widgets/navbar.html
@@ -1,48 +1,46 @@
 <nav class="navbar">
-    <a id="tesseau" class="nav-link" href="/">
-        <img src="/favicon.ico" class = "tesseau-logo" alt="Tesseau logo">
-        <span>Tesseau</span>
-    </a>
-    <ul>
-        <li class = "dropdown">
-        <a id="nav-reviewers" class="nav-link" href="/notes_stuff/reviewers.html">Reviewers</a>
-        <ul class="dropdown-menu">
-            <li><a href="/notes_stuff/reviewers">All Reviewers</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=itp">Intro to Philosophy</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=ess">Earth and Space 1</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=fm">Finite Math 1</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=e">English</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=f">Filipino</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=gm">General Math</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=gs">General Science</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=lcs">Life and Career Skills</a></li>
-            <li><a href="/notes_stuff/reviewers?subject=k">Kasaysayan</a></li>
-            
-        </ul>
+  <a id="tesseau" class="nav-link" href="/">
+    <img src="/favicon.ico" class="tesseau-logo" alt="Tesseau logo" />
+    <span>Tesseau</span>
+  </a>
+  <ul>
+    <li class="dropdown">
+      <a id="nav-reviewers" class="nav-link" href="/notes_stuff/reviewers.html"
+        >Reviewers</a
+      >
+      <ul class="dropdown-menu">
+        <li><a href="/notes_stuff/reviewers">All Reviewers</a></li>
+        <li>
+          <a href="/notes_stuff/reviewers?subject=itp">Intro to Philosophy</a>
         </li>
-        <li class = "dropdown">
-        <a id="reminders" class="nav-link" href="/reminders">Reminders</a>
-        <ul class = "dropdown-menu">
-            <li><a href="/reminders?section=tesla">Tesla</a></li>
-            <li><a href="/reminders?section=rousseau">Rousseau</a></li>
-        </ul>
+        <li>
+          <a href="/notes_stuff/reviewers?subject=ess">Earth and Space 1</a>
         </li>
-        <li class = "dropdown">
-            <a id="about" class="nav-link" href="/about">About</a></li>
-    </ul> 
+        <li><a href="/notes_stuff/reviewers?subject=fm">Finite Math 1</a></li>
+        <li><a href="/notes_stuff/reviewers?subject=e">English</a></li>
+        <li><a href="/notes_stuff/reviewers?subject=f">Filipino</a></li>
+        <li><a href="/notes_stuff/reviewers?subject=gm">General Math</a></li>
+        <li><a href="/notes_stuff/reviewers?subject=gs">General Science</a></li>
+        <li>
+          <a href="/notes_stuff/reviewers?subject=lcs"
+            >Life and Career Skills</a
+          >
+        </li>
+        <li><a href="/notes_stuff/reviewers?subject=k">Kasaysayan</a></li>
+      </ul>
+    </li>
+    <li class="dropdown">
+      <a id="reminders" class="nav-link" href="/reminders">Reminders</a>
+      <ul class="dropdown-menu">
+        <li><a href="/reminders?section=tesla">Tesla</a></li>
+        <li><a href="/reminders?section=rousseau">Rousseau</a></li>
+      </ul>
+    </li>
+    <li class="dropdown">
+      <a id="about" class="nav-link" href="/about">About</a>
+    </li>
+  </ul>
 </nav>
-<!--
-<div id="navbar-placeholder"></div>
-<script>
-    fetch("/widgets/navbar.html")
-        .then(res => res.text())
-        .then(html => {
-            document.getElementById("navbar-placeholder").innerHTML = html;
-            // Manually run navbar.js after injection
-            const script = document.createElement("script");
-            script.src = "/js/navbar.js";
-            document.body.appendChild(script);
-        });
 
-</script>
--->
+<!-- Toast container attached to navbar -->
+<div id="toast-container" class="toast-container"></div>
