--- a/widgets/content_box.html
+++ b/widgets/content_box.html
@@ -15,14 +15,15 @@
 
 <!--
 <div id="content-placeholder"></div>
-<script src="/widgets/js/content-box.js"></script>
+
 <link href="/widgets/css/content-box.css" rel="stylesheet">
 <script>
-    fetch("/widgets/contet-box.html")
+    fetch("/widgets/content_box.html")
         .then(res => res.text())
         .then(html => {
             document.getElementById("content-placeholder").innerHTML = html;
         });
 
 </script>
+<script src="/widgets/js/content-box.js"></script>
 -->
