--- a/widgets/footnote.html
+++ b/widgets/footnote.html
@@ -10,6 +10,7 @@
       href="https://www.instagram.com/tesseau.archives/"
       title="Instagram"
       style="margin: 0 0em"
+      target="_blank"
     >
       <img src="/assets/ig.png" alt="Instagram" style="height: 24px" />
     </a>
@@ -17,6 +18,7 @@
       href="https://www.facebook.com/profile.php?id=61578991087272"
       title="Facebook"
       style="margin: 0 0.5em"
+      target="_blank"
     >
       <img
         src="/assets/fb.png"
@@ -28,6 +30,7 @@
       href="https://github.com/GerroPogi/tesseau-website"
       title="GitHub"
       style="margin: 0 0.5em"
+      target="_blank"
     >
       <img
         src="/assets/github.png"
