--- a/about/forms/index.html
+++ b/about/forms/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Forms</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <title>Forms</title>
+    <link rel="stylesheet" href="/css/base.css" />
   </head>
   <body>
     <div id="navbar-placeholder"></div>
@@ -16,25 +16,34 @@
         });
     </script>
     <script src="/widgets/js/navbar.js"></script>
-    <main>
-      <section>
-        <h2>Contact Us</h2>
-        <form action="submit-form.php" method="post">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
-
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" required></textarea>
-
-          <button type="submit">Send</button>
-        </form>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2024 Tesseau Website</p>
-    </footer>
+    <div class="page">
+      <div class="container">
+        <h1>About Forms</h1>
+        <p>
+          This page contains links to various forms used by Tesseau students and
+          members.
+        </p>
+        <ul>
+          <li>
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSfD8jv5k2y3JH9z3F6X9Z
+              -gYk3"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Feedback Form</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div id="footnote-placeholder"></div>
+    <link href="/widgets/css/footnote.css" rel="stylesheet" />
+    <script>
+      fetch("/widgets/footnote.html")
+        .then((res) => res.text())
+        .then((html) => {
+          document.getElementById("footnote-placeholder").innerHTML = html;
+        });
+    </script>
   </body>
 </html>
