--- a/widgets/navbar.html
+++ b/widgets/navbar.html
@@ -37,6 +37,13 @@
       </ul>
     </li>
     <li class="dropdown">
+      <a id="forms" class="nav-link" href="/about/forms">Forms</a>
+      <ul class="dropdown-menu">
+        <li><a href="/about/forms">All Forms</a></li>
+        <li><a href="/about/forms/suggestions">Suggestions</a></li>
+      </ul>
+    </li>
+    <li class="dropdown">
       <a id="about" class="nav-link" href="/about">About</a>
     </li>
   </ul>
