changed the reminders to be more user friendly

--- a/about/forms/index.html
+++ b/about/forms/index.html
@@ -26,8 +26,7 @@
         <ul>
           <li>
             <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSfD8jv5k2y3JH9z3F6X9Z
-              -gYk3"
+              href="/about/forms/suggestions"
               target="_blank"
               rel="noopener noreferrer"
               >Feedback Form</a
