--- a/reminders/index.html
+++ b/reminders/index.html
@@ -121,6 +121,13 @@
         <hr />
         <div class="reminders-list" id="reminders-list">
           <!-- Reminders will be loaded here -->
+          <div id="valid-reminders">
+            <h2>Current Reminders</h2>
+          </div>
+
+          <div id="invalid-reminders">
+            <h2>Past Reminders</h2>
+          </div>
         </div>
       </div>
     </div>
